--- a/lingo.css
+++ b/lingo.css
@@ -1,32 +1,52 @@
 body{
 	background-color: lightblue;
+	background-image: url(background.jpg);
+	background-repeat: none;
+	background-size: cover;
+	margin: 0 auto;
 }
 .rows{
-	margin: 0 auto;
-	width: 350px;
-	background-color: white;
+	width: 580px;
+	height: 117px;
+	background-image: url(bord.jpg);
+	background-size: cover;
+	position: relative;
+	top: 165px;
+	left: 825px;
 }
 .rows>div{
 	border: 1px solid black;
 	display: inline-block;
-	width: 50px;
-	height: 42px;
-	margin: 10px 2px 10px 2px;
+	width: 110px;
+	height: 105px;
+	margin:2px 0;
 	text-align: center;
 	padding-top: 8px;
+	font-size: 70px;
 }
-#r1l1{
-	margin-left: 25px;
+#r1l0{
+	margin-left: 2px;
 }
-#r2l1{
-	margin-left: 25px;
+#r2l0{
+	margin-left: 2px;
 }
-#r3l1{
-	margin-left: 25px;
+#r3l0{
+	margin-left: 2px;
 }
-#r4l1{
-	margin-left: 25px;
+#r4l0{
+	margin-left: 2px;
 }
-#r5l1{
-	margin-left: 25px;
+#r5l0{
+	margin-left: 2px;
+}
+input{
+	position: absolute;
+	top: 295px;
+	left: 541px;
+	width: 224px;
+}
+button{
+	position: absolute;
+	top: 295px;
+	left: 488px;
 }
